deployment/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: javaspringbasickad
  labels:
    app: javaspringbasickad
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: javaspringbasickad
