deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name:  javaspringbasic-kad-ingress
  namespace: default
spec:
  rules:
  - host: springboot 
    http:
      paths:
      - backend:
          serviceName: javaspringbasickad 
          servicePort: 8080
status:
  loadBalancer:
    ingress:
    - ip: 169.45.189.35
